--- a/TouchMeIn/Base.lproj/Main.storyboard
+++ b/TouchMeIn/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="D6T-zl-WaZ">
-                                <rect key="frame" x="22.5" y="28" width="330" height="296"/>
+                                <rect key="frame" x="22.5" y="28" width="330" height="383"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GK0-4z-kna">
                                         <rect key="frame" x="47.5" y="0.0" width="235" height="79"/>
@@ -90,7 +90,22 @@
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L42-kR-z60">
+                                        <rect key="frame" x="132" y="316" width="66" height="67"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="67" id="aaj-1C-nAe"/>
+                                            <constraint firstAttribute="width" constant="66" id="yNM-cD-0sc"/>
+                                        </constraints>
+                                        <state key="normal" image="Touch-icon-lg"/>
+                                        <connections>
+                                            <action selector="touchIDLoginAction:" destination="YRn-d8-QPl" eventType="touchUpInside" id="k3j-GW-RKS"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="G4t-Jg-LwO" secondAttribute="trailing" id="BwN-pt-tDW"/>
+                                    <constraint firstItem="G4t-Jg-LwO" firstAttribute="leading" secondItem="D6T-zl-WaZ" secondAttribute="leading" id="nZn-LH-hTQ"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" red="0.1263858824968338" green="0.12638211250305176" blue="0.12638427317142487" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -104,6 +119,7 @@
                         <outlet property="createInfoLabel" destination="G4t-Jg-LwO" id="pn2-lZ-4Sq"/>
                         <outlet property="loginButton" destination="LYv-3L-ynM" id="hee-j2-UUK"/>
                         <outlet property="passwordTextField" destination="VBz-oZ-PB4" id="Uch-6n-rZ2"/>
+                        <outlet property="touchIDButton" destination="L42-kR-z60" id="mXX-gv-xSn"/>
                         <outlet property="usernameTextField" destination="d8k-Ay-bHW" id="Kpw-gS-9nU"/>
                         <segue destination="RxQ-Kn-NgB" kind="unwind" identifier="dismissLogin" unwindAction="unwindSegue:" id="hkh-DW-3QL"/>
                     </connections>
@@ -245,5 +261,6 @@
     </scenes>
     <resources>
         <image name="Button" width="131" height="53"/>
+        <image name="Touch-icon-lg" width="138" height="137"/>
     </resources>
 </document>
